work on back-sight : completly restart app !

--- a/back-sight/index.html
+++ b/back-sight/index.html
@@ -7,5 +7,6 @@
 <body>
   <h1><a href="./logic">running application</a></h1>
   <h1><a href="./layout">design</a></h1>
+  <h1><a href="./app">app</a></h1>
 </body>
 </html>
